--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" type="image/png" href="/icon.png" />
+    <link rel="shortcut icon" type="image/png" href="./static/img/icon.png" />
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href=".static/css/style.css" />
     <title>Bankist</title>
   </head>
   <body>
@@ -130,6 +130,6 @@
 
     <footer>&copy; by Jonas Schmedtmann. Don't claim as your own :)</footer>
 
-    <script src="script.js"></script>
+    <script src=".static/js/script.js"></script>
   </body>
 </html>
