--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href=".static/css/style.css" />
+    <link rel="stylesheet" href="./static/css/style.css" />
     <title>Bankist</title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
-      <img src="logo.png" alt="Logo" class="logo" />
+      <img src="./static/img/logo.png" alt="Logo" class="logo" />
       <form id="login" class="login">
         <input
           type="text"
@@ -130,6 +130,6 @@
 
     <footer>&copy; by Jonas Schmedtmann. Don't claim as your own :)</footer>
 
-    <script src=".static/js/script.js"></script>
+    <script src="./static/js/script.js"></script>
   </body>
 </html>
